fix bug #30587 (array_multisort doesn't separate zvals before changing them)