ext/standard/array.c
@@ -21,7 +21,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: array.c,v 1.282 2004/11/01 22:28:59 helly Exp $ */
+/* $Id: array.c,v 1.283 2004/11/19 16:55:37 tony2001 Exp $ */
 
 #include "php.h"
 #include "php_ini.h"
@@ -3650,6 +3650,7 @@ PHP_FUNCTION(array_multisort)
 	 * array, and the very first argument has to be an array.
 	 */
 	for (i = 0; i < argc; i++) {
+		SEPARATE_ZVAL(args[i]);
 		if (Z_TYPE_PP(args[i]) == IS_ARRAY) {
 			/* We see the next array, so we update the sort flags of
 			   the previous array and reset the sort flags. */
